--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,15 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-lapin = "2.3"
 tokio = { version = "1", features = ["full"] }
+lapin = { version = "2", features = ["native-tls", "serde_json"] }
+tokio-amqp = "2.0.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+dotenv = "0.15"
 futures-util = "0.3"
-tokio-stream = "0.1.17" # for stream.next()
+image = { version ="0.24", features = ["png", "jpeg", "webp"] }
+log = "0.4"
+anyhow = "1.0"
+chrono = "0.4"
+
