--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,8 @@ image = { version ="0.24", features = ["png", "jpeg", "webp"] }
 log = "0.4"
 anyhow = "1.0"
 chrono = "0.4"
-socketio = "0.4"
+tokio-tungstenite = "0.21"
+tungstenite = "0.21"
+redis = { version = "0.25", features = ["tokio-comp"] }
+dotenvy = "0.15"
 
