--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,6 @@ tokio-tungstenite = "0.21"
 tungstenite = "0.21"
 redis = { version = "0.25", features = ["tokio-comp"] }
 dotenvy = "0.15"
+once_cell = "1.21.3"
+config = "0.15.11"
 
