--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,21 +4,19 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-tokio = { version = "1", features = ["full"] }
-lapin = { version = "2", features = ["native-tls", "serde_json"] }
-tokio-amqp = "2.0.0"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-dotenv = "0.15"
-futures-util = "0.3"
-image = { version ="0.24", features = ["png", "jpeg", "webp"] }
-log = "0.4"
 anyhow = "1.0"
 chrono = "0.4"
-tokio-tungstenite = "0.21"
-tungstenite = "0.21"
-redis = { version = "0.25", features = ["tokio-comp"] }
-dotenvy = "0.15"
-once_cell = "1.21.3"
 config = "0.15.11"
-
+dotenv = "0.15"
+dotenvy = "0.15"
+futures-util = "0.3"
+image = { version = "0.24", features = ["png", "jpeg", "webp"] }
+lapin = { version = "2", features = ["native-tls", "serde_json"] }
+log = "0.4"
+once_cell = "1.21.3"
+redis = { version = "0.25", features = ["tokio-comp"] }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+tokio = { version = "1", features = ["full"] }
+tokio-amqp = "2.0.0"
+tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
